@@ -1,6 +1,10 @@
 2010-07-15  David Reveman  <davidr@novell.com>
 
 	* effect.h:
+	* effect.cpp: Remove blend_enable argument from
+	DrawVertexBuffer function and remove unnecessary framebuffer
+	state changes.
+
 	* effect.cpp: Major cleanup by using GL rasterization rules
 	and adding CreateVertexBuffer.
 	Rename DrawVertices to DrawVertexBuffer.
